Updated website with less stuff. Cleaner and more professional (and more importantly, more teaser-y)

--- a/fontkit/stylesheet.css
+++ b/fontkit/stylesheet.css
@@ -43,3 +43,11 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'rationale';
+    src: url('rationale.otf');
+    font-weight: normal;
+    font-style: normal;
+
+}
