--- a/style - Copy.css
+++ b/style - Copy.css
@@ -4,9 +4,8 @@
     font-size: 1em;
     margin: 0px;
 	text-align: center;
-	color: #FFFFFF;
+	color: #BFCFFF;
 	background-image: url('./img/pass2/bg.png'); 
-  background-size: 100%;
 }
 
 h1
@@ -16,27 +15,17 @@ h1
 
 h3
 {
-    font-size: 1em;
+    font-size: 2.4em;
     margin: 10px 0px -20px 0px;
 }
 
 h4
 {
     font-size: 1.4em;
-    font-family: 'rationale';
-    font-weight: 100;
-    margin-top: -10px;
-    color: #FF4000;
-}
-
-
-h5
-{
-    font-size: 1em;
-    font-family: 'rationale';
-    margin-bottom: 10px;
-    margin-top: -30px;
-    color: #777777;
+    font-style: italic;
+    font-family: 'Roboto';
+    font-weight: 300;
+    color: #FF6500;
 }
 
 h6
@@ -151,6 +140,18 @@ p
     padding-left: 20px;    
     padding-right: 20px;
 }
+
+h5
+{
+    font-size: 2em;
+    font-family: 'orbitronlight';
+    margin-bottom: 10px;
+    margin-top: 30px;
+	padding-left: 120px;
+	padding-right: 120px;
+	color: #FF6A00;
+}
+
 a
 {
 	color: #ff5000;
