More details, beginning the PR 'assault'!

--- a/fontkit/stylesheet.css
+++ b/fontkit/stylesheet.css
@@ -51,3 +51,13 @@
     font-style: normal;
 
 }
+
+
+@font-face {
+    font-family: 'Exo2';
+    src: url('Exo-Regular.otf');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
