--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 ﻿body
 {
     font-family: 'Roboto';
-    font-size: 1em;
+    font-size: 1.2em;
     margin: 0px;
 	text-align: center;
-	color: #FFFFFF;
-	background-image: url('./img/pass2/bg.png'); 
-  background-size: 100%;
+	background-color: #1A0066;
+	background-image: url('./img/pass4/bg2.jpg'); 
+    background-size: 100%;
+    color: white;
+    font-family: 'Exo2';
+    font-weight: 10;
 }
 
 h1
@@ -22,21 +25,20 @@ h3
 
 h4
 {
-    font-size: 1.4em;
+    font-size: 2.1em;
     font-family: 'rationale';
     font-weight: 100;
-    margin-top: -10px;
+    margin: 5px;
     color: #FF4000;
 }
 
 
 h5
 {
-    font-size: 1em;
+    font-size: 1.2em;
     font-family: 'rationale';
-    margin-bottom: 10px;
-    margin-top: -30px;
-    color: #777777;
+    line-height: 0.2em;
+    color: #ffffff;
 }
 
 h6
@@ -135,21 +137,10 @@ p
 
 }
 
+
 #latest 
 {
     display: inline-block;
-}
-#latest p
-{
-	text-align:left;
-	padding-left: 120px;
-	padding-right: 120px;
-}
-#latest img
-{
-    display: inline;
-    padding-left: 20px;    
-    padding-right: 20px;
 }
 a
 {
