--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ h1
     margin: 0px;
 }
 
+h2
+{
+    font-size: 3.5em;
+    font-family: 'rationale';
+    color: #FF5000;
+    line-height: 0.8em;
+}
+
 h3
 {
     font-size: 3.5em;
